--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     </head>
 
     <body>
-        
+        <center>
         <h1>Arpan's Portfolio</h1>
         <h1><i>I am web developer (sosta version).</i></h1>
 
@@ -49,7 +49,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
         <!--About Me-->
         <a href="./public/about.html">About Me</a>
         <a href="./public/contact.html">Contact Me</a>
-
+</center>
     </body>
 
 </html>
